<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.AddFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_width="@dimen/_45mdp"
        android:layout_height="@dimen/_45mdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_7mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:layout_marginEnd="@dimen/_14mdp"
        app:cardCornerRadius="@dimen/_60mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImgAdd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45mdp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            tools:ignore="VisualLintBounds" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8mdp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/_12font_mdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.24000001"
        tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/departmentAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2mdp"
        android:text="@string/skill"
        android:textColor="@color/black"
        android:textSize="@dimen/_10font_mdp"
        app:layout_constraintStart_toStartOf="@+id/nameAdd"
        app:layout_constraintTop_toBottomOf="@+id/nameAdd"
        tools:ignore="TextContrastCheck,VisualLintOverlap" />

    <Button
        android:id="@+id/postBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_28mdp"
        android:layout_marginEnd="@dimen/_10mdp"
        android:background="@drawable/disable_btn_bg"
        android:enabled="false"
        android:text="@string/post"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_8font_mdp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="TouchTargetSizeCheck,VisualLintOverlap" />

    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10mdp"
        android:layout_marginTop="@dimen/_12mdp"
        android:layout_marginEnd="@dimen/_10mdp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/ask_question_from_community"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14font_mdp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:ignore="VisualLintTextFieldSize" />

</androidx.constraintlayout.widget.ConstraintLayout>