<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_marginBottom="@dimen/_8mdp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_width="@dimen/_35mdp"
        android:layout_height="@dimen/_35mdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_7mdp"
        android:layout_marginTop="@dimen/_8mdp"
        android:layout_marginEnd="@dimen/_14mdp"
        app:cardCornerRadius="@dimen/_60mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImgFriends"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35mdp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            tools:ignore="VisualLintBounds" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/commentDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8mdp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="@dimen/_12font_mdp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.060000002"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2mdp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="@dimen/_10font_mdp"
        app:layout_constraintStart_toStartOf="@+id/commentDesc"
        app:layout_constraintTop_toBottomOf="@+id/commentDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>